@@ -28,6 +28,13 @@ Feature: Module configuration
     And I fill in "marketo_ma_munchkin_lead_source" with "bogus02"
     And I check "marketo_ma_logging"
     And I fill in "marketo_ma_munchkin_partition" with "bogus03"
+    And I fill in "marketo_ma_munchkin_altIds" with "bogus0301"
+    And I fill in "marketo_ma_munchkin_cookieLifeDays" with "bogus0302"
+    And I fill in "marketo_ma_munchkin_clickTime" with "bogus0303"
+    And I fill in "marketo_ma_munchkin_cookieAnon" with "bogus0304"
+    And I fill in "marketo_ma_munchkin_domainLevel" with "bogus0305"
+    And I fill in "marketo_ma_munchkin_disableClickDelay" with "bogus0306"
+    And I fill in "marketo_ma_munchkin_asyncOnly" with "bogus0307"
     And I fill in "marketo_ma_rest_endpoint" with "bogus04"
     And I fill in "marketo_ma_rest_identity" with "bogus05"
     And I fill in "marketo_ma_rest_client_id" with "bogus06"
@@ -44,6 +51,13 @@ Feature: Module configuration
     And the "marketo_ma_munchkin_lead_source" field should contain "bogus02"
     And the "marketo_ma_logging" checkbox should be checked
     And the "marketo_ma_munchkin_partition" field should contain "bogus03"
+    And the "marketo_ma_munchkin_altIds" field should contain "bogus0301"
+    And the "marketo_ma_munchkin_cookieLifeDays" field should contain "bogus0302"
+    And the "marketo_ma_munchkin_clickTime" field should contain "bogus0303"
+    And the "marketo_ma_munchkin_cookieAnon" field should contain "bogus0304"
+    And the "marketo_ma_munchkin_domainLevel" field should contain "bogus0305"
+    And the "marketo_ma_munchkin_disableClickDelay" field should contain "bogus0306"
+    And the "marketo_ma_munchkin_asyncOnly" field should contain "bogus0307"
     And the "marketo_ma_rest_endpoint" field should contain "bogus04"
     And the "marketo_ma_rest_identity" field should contain "bogus05"
     And the "marketo_ma_rest_client_id" field should contain "bogus06"
@@ -63,10 +77,54 @@ Feature: Module configuration
     Then I should see "Account ID field is required."
     And I should see "API Private Key field is required."
 
+  @javascript
+  Scenario: Munchkin Advanced Initialization Parameters
+    Given I populate the Marketo MA config using "marketo_test_settings"
+
+    When I am logged in as an administrator
+    And I go to "/admin/config/search/marketo_ma"
+    And I click "Advanced Initialization Parameters"
+    And I fill in "marketo_ma_munchkin_partition" with "100"
+    And I fill in "marketo_ma_munchkin_altIds" with "AAA-AAA-AAA, BBB-BBB-BBB"
+    And I fill in "marketo_ma_munchkin_cookieLifeDays" with "200"
+    And I fill in "marketo_ma_munchkin_clickTime" with ""
+    And I fill in "marketo_ma_munchkin_cookieAnon" with "1"
+    And I fill in "marketo_ma_munchkin_domainLevel" with "3"
+    And I fill in "marketo_ma_munchkin_disableClickDelay" with "0"
+    And I fill in "marketo_ma_munchkin_asyncOnly" with "0"
+    And I press "Save configuration"
+    Then I should see "The configuration options have been saved."
+
+    When I am an anonymous user
+    And I am on the homepage
+    Then Munchkin init parameter "initParams.wsInfo" should be "'100'"
+    And Munchkin init parameter "initParams.altIds[0]" should be "'AAA-AAA-AAA'"
+    And Munchkin init parameter "initParams.altIds[1]" should be "'BBB-BBB-BBB'"
+    And Munchkin init parameter "initParams.cookieLifeDays" should be "'200'"
+    And Munchkin init parameter "initParams.clickTime" should be "undefined"
+    And Munchkin init parameter "initParams.cookieAnon" should be "true"
+    And Munchkin init parameter "initParams.domainLevel" should be "'3'"
+    And Munchkin init parameter "initParams.disableClickDelay" should be "false"
+    And Munchkin init parameter "initParams.asyncOnly" should be "false"
+
+    Given I populate the Marketo MA config using "marketo_test_settings"
+
+    When I am an anonymous user
+    And I am on the homepage
+    Then Munchkin init parameter "initParams.wsInfo" should be "undefined"
+    And Munchkin init parameter "initParams.altIds" should be "undefined"
+    And Munchkin init parameter "initParams.cookieLifeDays" should be "undefined"
+    And Munchkin init parameter "initParams.clickTime" should be "undefined"
+    And Munchkin init parameter "initParams.cookieAnon" should be "undefined"
+    And Munchkin init parameter "initParams.domainLevel" should be "undefined"
+    And Munchkin init parameter "initParams.disableClickDelay" should be "undefined"
+    And Munchkin init parameter "initParams.asyncOnly" should be "undefined"
+
   @config @live @production
   Scenario: Configure live module settings
     Given I populate the Marketo MA config using "marketo_settings"
     And I am logged in as an administrator
     When I go to "/admin/config/search/marketo_ma"
     And I press "Save configuration"
-    Then I should see "The configuration options have been saved."
+    Then I should not see "Unable to validate REST API settings."
+    And I should see "The configuration options have been saved."
