@@ -4,6 +4,7 @@ Marketo MA Changelog
 Marketo MA 7.x-2.x, 2016-08-31
 ------------------------------
 - Replace SOAP API with REST API.
+- #2550517 by jyokum, benjy: Added Munchkin JS API init parameters.
 
 Marketo MA 7.x-1.x, 2016-08-13
 ------------------------------
